--- a/source/main.css
+++ b/source/main.css
@@ -37,7 +37,7 @@ body[data-light-mode=dark] {
 	top:1px;
 }
 
-#startButton {
+.controlButton {
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
 	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
 	background-color:#ededed;
@@ -54,11 +54,11 @@ body[data-light-mode=dark] {
   outline: none;
 }
 
-#startButton:hover{
+.controlButton:hover{
   background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
 	background-color:#dfdfdf;
 }
-#startButton:active {
+.controlButton:active {
   position:relative;
 	top:1px;
 }
