--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -44,14 +44,19 @@ body {
     text-shadow: 1px 1px 1px #000;
 
 }
+
+#settings-icon:hover {
+    cursor: pointer;
+}
 .circle {
     width: 200px;
     height: 200px;
     margin-right: auto;
     margin-left: auto;
-    border-style: solid;
-    border-width: 10px;
-    border-color: #000;
+    border: 5px solid transparent;
+    border-radius: 50%;
+    background-color: #ff0;
+    box-shadow: 0 0 20px 20px #ff0;
     border-radius: 50%;
 }
 
@@ -88,7 +93,7 @@ body {
 /*---------------------------------
          Settings Menu Display 
 ---------------------------------*/
-.settings-wrapper {
+#settings-menu {
     position: absolute;
     left: 0%;
     top: 0%;
@@ -105,7 +110,7 @@ body {
     box-shadow: inset 0 -1px 10px 3px #6d6d6d;
 }
 
-.close-text {
+#close {
     position: absolute; 
     left: auto;
     top: 0%;
@@ -130,4 +135,58 @@ button {
 button:hover {
     background-color: rgb(100, 100, 100);
     /* color: #000; */
+}
+
+/* .grid-container {
+    display: grid;
+    margin-right: 10%;
+    margin-left: 10%;
+    grid-auto-columns: 1fr;
+    grid-column-gap: 12px;
+    grid-template-columns: 0.5fr 0.5fr;
+    grid-template-rows: auto auto auto auto;
+}
+
+.custom-settings {
+    text-align: right;
+}
+
+.custom-time {
+    justify-self: left;
+    padding-left: 10px;
+    padding-right: 40px;
+    height: 50px;
+    border: 1px solid #000;
+    background-color: #fff;
+    text-align: center;
+} */
+
+.form-container {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 125px;
+    text-align: center;
+}
+
+.field-label {
+    font-size: 24px;
+}
+
+input {
+    text-align: center;
+    font-size: 34px;
+}
+.custom-time {
+    width: 125px;
+}
+
+.custom-volume {
+    display: inline-block;
+    width: 80px;
+}
+
+form h1 {
+    display: inline-block;
+    margin: 0 0;
 }
