--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -1,10 +1,12 @@
 body {
     height: 100vh;
-    background-color: #b9e1f0;
+    /* background-color: #b9e1f0;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#86ffff), to(#fff));
-    background-image: linear-gradient(180deg, #86ffff, #fff);
+    background-image: linear-gradient(180deg, #86ffff, #fff); */
     text-align: center;
     color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3em;
 }
 
 body[data-light-mode=potato]{
@@ -26,14 +28,8 @@ body[data-light-mode=light] {
     background-image: none;
 }
 
-.field {
-    position: absolute;
-    left: 0%;
-    top: auto;
-    right: 0%;
-    bottom: 0%;
-    height: 50vh;
-    background-color: #52d344;
+p {
+    margin-bottom: 0px;
 }
 
 /*---------------------------------
@@ -47,23 +43,26 @@ body[data-light-mode=light] {
     /* margin: 0 30%; */
     bottom: auto;
     height: inherit;
-    border-style: dashed;
-    border-color: red;
+    /* border-style: dashed;
+    border-color: red; */
 }
 
 .title {
     display: block;
     margin-top: 40px;
+    margin-bottom: 20px;
     text-shadow: 1px 1px 1px #000;
 }
 
 .phase {
     display: inline-block;
-    margin: 40px 100px 0 auto;
+    margin: 20px 0;
     text-shadow: 1px 1px 1px #000;
-
 }
 
+#settings-icon {
+    margin-left: 80px;
+}
 #settings-icon:hover {
     cursor: pointer;
 }
@@ -84,7 +83,7 @@ body[data-light-mode=light] {
     padding: 25px 0px;
     font-size: 50px;
     text-shadow: 1px 1px 1px #000;
-
+    font-weight: bold;
 }
 
 .image {
@@ -129,6 +128,10 @@ body[data-light-mode=light] {
     box-shadow: inset 0 -1px 10px 3px #6d6d6d;
 }
 
+#settings-menu p {
+    margin-top: 20px;
+}
+
 #close {
     position: absolute;
     left: auto;
@@ -137,6 +140,7 @@ body[data-light-mode=light] {
     bottom: auto;
     padding-right: 20px;
     font-size: 30px;
+    font-weight: bold;
     cursor: pointer;
 }
 
@@ -145,45 +149,24 @@ button {
     padding: 10px 15px;
     border: 2px solid #000;
     border-radius: 50px;
-    background-color: #333;
+    background-color: #333; 
+    /* background-color: #999; For dark mode */
     font-size: 24px;
+    font-weight: bold;
     color: #fff;
     cursor: pointer;
 }
 
 button:hover {
     background-color: rgb(100, 100, 100);
-    /* color: #000; */
 }
-
-/* .grid-container {
-    display: grid;
-    margin-right: 10%;
-    margin-left: 10%;
-    grid-auto-columns: 1fr;
-    grid-column-gap: 12px;
-    grid-template-columns: 0.5fr 0.5fr;
-    grid-template-rows: auto auto auto auto;
-}
-.custom-settings {
-    text-align: right;
-}
-.custom-time {
-    justify-self: left;
-    padding-left: 10px;
-    padding-right: 40px;
-    height: 50px;
-    border: 1px solid #000;
-    background-color: #fff;
-    text-align: center;
-} */
 
 .form-container {
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width: 125px;
-    text-align: center;
+    width: 300px;
+    text-align: right;
 }
 
 .field-label {
@@ -198,12 +181,18 @@ input {
     width: 125px;
 }
 
-.custom-volume {
+#volume {
     display: inline-block;
-    width: 80px;
+    width: 75px;
 }
 
-form h1 {
+.volume-icon {
     display: inline-block;
-    margin: 0 0;
+    width: 40px;
+}
+
+form input {
+    border-radius: 20px;
+    border-style: solid black;
+    border-width: 5px;
 }
