--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -9,6 +9,14 @@ body {
     font-size: 3em;
 }
 
+.bg {
+    background-image: url("img/background.png");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 body[data-light-mode=potato]{
     height: 100vh;
     background-color: #b9e1f0;
@@ -51,9 +59,10 @@ p {
 .title {
     display: block;
     margin-top: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 3px;
     text-shadow: 1px 1px 1px #000;
     font-family: sans-serif;
+    font-size: 30px;
 }
 
 .phase {
@@ -107,6 +116,7 @@ p {
 
 #taskAdder {
     margin-top: 20px;
+    font-size: 20px;
 }
 
 @media screen and (max-width: 479px) {
@@ -126,6 +136,13 @@ p {
         height: 50px;
     }
 }
+
+input[type="text"] {
+    margin-top: 30px;
+    height:30px;
+    width: 300px;
+}
+
 /*---------------------------------
          Settings Menu Display
 ---------------------------------*/
@@ -144,10 +161,12 @@ p {
     background-image: -webkit-gradient(linear, left bottom, left top, from(#eee), to(#fff));
     background-image: linear-gradient(0deg, #eee, #fff);
     box-shadow: inset 0 -1px 10px 3px #6d6d6d;
+    font-size: 38px;
 }
 
 .menu p {
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .close {
@@ -230,7 +249,7 @@ button:hover {
 
 input {
     text-align: center;
-    font-size: 34px;
+    font-size: 20px;
 }
 .custom-time {
     width: 60px;
@@ -248,7 +267,7 @@ input {
     cursor: pointer;
 }
 
-form div { 
+form div {
     display: block;
 }
 .menu form input {
@@ -314,5 +333,3 @@ form p {
     display: inline;
     font-size: 1em;
 }
-
-
