--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -48,12 +48,12 @@ p {
     left: 0%;
     top: 0%;
     right: 0%;
-    /* margin: 0 30%; */
     bottom: auto;
     height: inherit;
-    /* border-style: dashed;
-    border-color: red; */
+    border-style: dashed;
+    border-color: red;
 }
+
 
 #title {
     display: block;
@@ -115,6 +115,9 @@ p {
 }
 
 @media screen and (max-width: 479px) {
+    .contentWrapper {
+        margin: 0 0;
+    }
     .buttonWrapper button {
         width: 100px;
         height: 50px;
@@ -327,11 +330,15 @@ form p {
 
 .userTask p {
     display: inline;
-    font-size: 1em;
+    font-size: 2vw;
 }
 
 @media screen and (max-width: 479px) {    
     #taskMenu p {
         font-size: 25px;
     }
+}
+
+#mainTasks {
+    max-width: 768px;
 }
