--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -4,34 +4,28 @@
 
 body {
     height: 100vh;
-    /* background-color: #b9e1f0;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#86ffff), to(#fff));
-    background-image: linear-gradient(180deg, #86ffff, #fff); */
     text-align: center;
-    color: #333;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3em;
 }
 
-
-body[data-light-mode=potato]{
-    height: 100vh;
-    background-color: #73d918;
-    text-align: center;
+.potatoTheme {
     color: #333;
+    background-color: #73d918;
     background-image: url("img/background.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-body[data-light-mode=dark] {
+.darkTheme {
+    color: white;
     background-color: #333333;
     background-image: none;
-    color: white;
 }
 
-body[data-light-mode=light] {
+.lightTheme {
+    color: #333;
     background-color: white;
     background-image: none;
 }
@@ -50,8 +44,8 @@ p {
     right: 0%;
     bottom: auto;
     height: inherit;
-    border-style: dashed;
-    border-color: red;
+    /* border-style: dashed;
+    border-color: red; */
 }
 
 
@@ -156,13 +150,19 @@ input[type="text"] {
     margin-top: 15vh;
     border: 5px solid #000;
     border-radius: 50px 50px 50px 50px;
-    background-color: white;
-    background-image: -webkit-gradient(linear, left bottom, left top, from(#eee), to(#fff));
-    background-image: linear-gradient(0deg, #eee, #fff);
     box-shadow: inset 0 -1px 10px 3px #6d6d6d;
     font-size: 38px;
 }
 
+.menuLight {
+    background-color: white;
+    background-image: -webkit-gradient(linear, left bottom, left top, from(#eee), to(#fff));
+    background-image: linear-gradient(0deg, #eee, #fff);
+}
+
+#settingsMenu {
+    width: 400px;
+}
 .menu p {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -193,42 +193,8 @@ button {
     cursor: pointer;
 }
 
-button[mode=light] {
-    margin: 0 10px;
-    padding: 10px 15px;
-    border: 2px solid #000;
-    border-radius: 50px;
-    background-color: #333;
-    /* background-color: #999; For dark mode */
-    font-size: 24px;
-    font-weight: bold;
-    color: #fff;
-    cursor: pointer;
-}
-
-button[mode=potato] {
-    margin: 0 10px;
-    padding: 10px 15px;
-    border: 2px solid #000;
-    border-radius: 50px;
-    background-color: #333;
-    /* background-color: #999; For dark mode */
-    font-size: 24px;
-    font-weight: bold;
-    color: #fff;
-    cursor: pointer;
-}
-
-button[mode=dark] {
-    margin: 0 10px;
-    padding: 10px 15px;
-    border: 2px solid #fff;
-    border-radius: 50px;
+.darkButton {
     background-color: #999;
-    font-size: 24px;
-    font-weight: bold;
-    color: #fff;
-    cursor: pointer;
 }
 
 button:hover {
