--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -9,7 +9,7 @@ body {
     font-size: 3em;
 }
 
-.potatoTheme {
+.themePotato {
     color: #333;
     background-color: #73d918;
     background-image: url("img/background.png");
@@ -18,13 +18,13 @@ body {
     background-size: cover;
 }
 
-.darkTheme {
+.themeDark {
     color: white;
     background-color: #333333;
     background-image: none;
 }
 
-.lightTheme {
+.themeLight {
     color: #333;
     background-color: white;
     background-image: none;
@@ -77,13 +77,24 @@ p {
     height: 200px;
     margin-right: auto;
     margin-left: auto;
-    border: 5px solid transparent;
-    border-radius: 50%;
-    background-color: #ff0;
-    box-shadow: 0 0 20px 20px #ff0;
     border-radius: 50%;
 }
 
+.circleLight {
+    border: 10px solid black;
+    background-color: white;
+}
+
+.circleDark {
+    border: 10px solid white;
+    background-color: #333;
+}
+
+.circlePotato {
+    border: 5px solid #ff0;
+    background-color: #ff0;
+    box-shadow: 0 0 20px 20px #ff0;
+}
 #timerDisplay {
     margin: 40px auto;
     padding: 25px 0px;
@@ -232,16 +243,17 @@ input {
     cursor: pointer;
 }
 
-form div {
+.userInputContainer div {
     display: block;
 }
-.menu form input {
+
+.userInputContainer input {
     border-radius: 20px;
     border-style: solid black;
     border-width: 5px;
 }
 
-form p {
+.userInputContainer p {
     display: inline;
     margin: 0 -10px;
 }
@@ -256,13 +268,11 @@ form p {
         width: 100%;
     }
 
-    .formContainer {
-        width: 100%;
-    }
-    form input {
+    .userInputContainer input {
         font-size: 24px;
     }
-    form p {
+
+    .userInputContainer p {
         margin: 0 -10px;
     }
 }
@@ -288,6 +298,32 @@ form p {
     border-width: 2px;
     text-align: left;
 }
+
+.markCircle {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    /* background-color: black; */
+}
+
+.markLight {
+    border: 5px solid black;
+}
+
+.markDark {
+    border: 5px solid white;
+}
+
+.markFill {
+    background-color: yellow;
+}
+/* Use potato / food image
+.markPotato {
+
+} */
+
 .userTask img {
     display: inline-block;
     height: 50px;
@@ -296,10 +332,11 @@ form p {
 
 .userTask p {
     display: inline;
-    font-size: 2vw;
+    font-size: 3vw;
+    word-wrap: break-word;
 }
 
-@media screen and (max-width: 479px) {    
+@media screen and (max-width: 768px) {
     #taskMenu p {
         font-size: 25px;
     }
