--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -3,6 +3,7 @@
 ---------------------------------*/
 
 body {
+    margin: 0;
     height: 100vh;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -156,6 +157,7 @@ input[type="text"] {
     right: 0%;
     bottom: auto;
     display: none; /* Change block/none */
+    overflow: hidden;
     min-height: 200px;
     max-width: 768px;
     margin-top: 15vh;
@@ -268,6 +270,9 @@ input {
         width: 100%;
     }
 
+    #prompt {
+        width: 100%;
+    }
     .userInputContainer input {
         font-size: 24px;
     }
@@ -292,6 +297,11 @@ input {
     cursor: pointer;
 }
 
+#taskListContainer {
+    max-height: 400px;
+    overflow-y: scroll;
+
+}
 .userTask {
     margin: 10px 20px;
     border-style: solid;
@@ -319,10 +329,6 @@ input {
 .markFill {
     background-color: yellow;
 }
-/* Use potato / food image
-.markPotato {
-
-} */
 
 .userTask img {
     display: inline-block;
@@ -343,5 +349,12 @@ input {
 }
 
 #mainTasks {
+    margin: 0 auto;
     max-width: 768px;
+    max-height: 28vh;
+    overflow-y: scroll;
+}
+
+#confirmMessage {
+    margin: 20px 10px;
 }
