--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -8,6 +8,7 @@ body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3em;
+    overflow-x: hidden;
 }
 
 .themePotato {
@@ -71,6 +72,7 @@ p {
     text-shadow: 1px 1px 1px #000;
     font-family: sans-serif;
     font-size: 30px;
+    float: center;
 }
 
 #phaseDisplay {
@@ -80,7 +82,16 @@ p {
 }
 
 #settingsIcon {
-    margin-left: 80px;
+    position: absolute;
+    top: 10%;
+    right: 35%;
+    float : right;
+}
+
+@media screen and (max-width: 768px) {
+    #settingsIcon {
+        right: 5%
+    }
 }
 
 #settingsIcon:hover {
@@ -166,29 +177,42 @@ input[type="text"] {
 ---------------------------------*/
 .menu {
     position: absolute;
-    left: 0%;
-    top: 0%;
-    right: 0%;
-    bottom: auto;
     overflow: hidden;
     min-height: 200px;
     max-width: 768px;
-    margin-top: 15vh;
     border: 5px solid #000;
     border-radius: 50px 50px 50px 50px;
     box-shadow: inset 0 -1px 10px 3px #6d6d6d;
     font-size: 38px;
+    cursor: move;
 }
 
+.taskHelp {
+    font-size: 20px;
+    margin: 5px 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
 .menuLight {
     background-color: white;
     background-image: -webkit-gradient(linear, left bottom, left top, from(#eee), to(#fff));
     background-image: linear-gradient(0deg, #eee, #fff);
 }
 
-#settingsMenu {
-    width: 400px;
+ #settingsMenuHeader {
+    padding: 10px;
+    height: 50px;
+    cursor: move;
 }
+
+.headerDark {
+    background-color: rgb(85, 85, 85);
+}
+
+.headerLight {
+    background-color: #333;
+}
+
 .menu p {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -280,6 +304,7 @@ input {
 } */
 @media screen and (max-width: 479px) {
     .menu {
+        top: 50%;
         width: 100%;
     }
 
@@ -313,8 +338,10 @@ input {
 #taskListContainer {
     max-height: 400px;
     overflow-y: scroll;
+    cursor: auto;
 
 }
+
 .userTask {
     margin: 10px 20px;
     border-style: solid;
@@ -370,4 +397,19 @@ input {
 
 #confirmMessage {
     margin: 20px 10px;
+}
+
+#prompt {
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    right: 0%;
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 250px;
+    max-width: 768px;
+    border: 5px solid #000;
+    border-radius: 50px 50px 50px 50px;
+    box-shadow: inset 0 -1px 10px 3px #6d6d6d;
+    font-size: 38px;
 }
