Added language dropdown to potato theme

--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -134,6 +134,51 @@ input[type="text"] {
     height:30px;
     width: 300px;
 }
+/*---------------------------------
+         Language DropDown
+---------------------------------*/
+
+.languageBtn {
+    background-color: #63b8fd;
+    color: rgb(2, 2, 2);
+    padding: 15px;
+    font-size: 15px;
+    margin-left: -600px;
+    position: relative;
+    border: none;
+  }
+  
+  .dropdown {
+    position: relative;
+    margin-left: -600px;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #12cdee;
+    margin-left: -350px;
+    min-width: 100px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 10px 10px;
+    font-size: 15px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .languageBtn {background-color: #17c71d;}
+
+
 
 /*---------------------------------
          Settings Menu Display
@@ -267,6 +312,7 @@ form p {
         margin: 0 -10px;
     }
 }
+
 /*---------------------------------
          Task Menu Display
 ---------------------------------*/
@@ -309,3 +355,5 @@ form p {
 #mainTasks {
     max-width: 768px;
 }
+
+
