--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -446,14 +446,16 @@ input {
     top: 50%;
     left: 0%;
     right: 0%;
+    margin-top: -150px;
+    padding-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    min-height: 250px;
+    min-height: 150px;
     max-width: 768px;
     border: 5px solid #000;
     border-radius: 50px 50px 50px 50px;
     box-shadow: inset 0 -1px 10px 3px #6d6d6d;
-    font-size: 38px;
+    font-size: 28px;
 }
 
 /* additional spacing and alignment */
