--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -447,7 +447,8 @@ input {
     left: 0%;
     right: 0%;
     margin-top: -150px;
-    padding-top: 20px;
+    padding-top: 15px;
+    padding-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     min-height: 150px;
