--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -64,21 +64,25 @@ p {
     border-color: red; */
 }
 
-
 #title {
     display: block;
-    margin-top: 40px;
-    margin-bottom: 3px;
-    text-shadow: 1px 1px 1px #000;
-    font-family: sans-serif;
-    font-size: 30px;
-    float: center;
+    margin-top: 30px;
+    margin-bottom: 18px;
+    margin-left: 30px;
+    /* text-shadow: 1px 1px 1px #000; */
+    font-family: Georgia,serif;
+    font-size: 20px;
+    font-variant: small-caps; 
+    text-transform: none; 
+    font-weight: 100;
+    float: left;
 }
 
 #phaseDisplay {
     display: inline-block;
-    margin: 20px 0;
+    margin: 70px 0px 30px -140px;
     text-shadow: 1px 1px 1px #000;
+    font-size: 32px;
 }
 
 #settingsIcon {
@@ -99,33 +103,34 @@ p {
 }
 
 #circleTimer {
-    width: 200px;
-    height: 200px;
-    margin-top: 15px;
+    width: 150px;
+    height: 150px;
+    margin-top: 10px;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 10px;
     border-radius: 50%;
 }
 
 .circleLight {
-    border: 10px solid black;
+    border: 8px solid black;
     background-color: white;
 }
 
 .circleDark {
-    border: 10px solid white;
+    border: 8px solid white;
     background-color: #333;
 }
 
 .circlePotato {
-    border: 5px solid #ff0;
+    border: 8px solid #ff0;
     background-color: #ff0;
-    box-shadow: 0 0 20px 20px #ff0;
+    box-shadow: 0 0 15px 15px #ff0;
 }
 #timerDisplay {
-    margin: 40px auto;
-    padding: 25px 0px;
-    font-size: 50px;
+    margin:25px auto;
+    padding: 26px 0px;
+    font-size: 40px;
     text-shadow: 1px 1px 1px #000;
     font-weight: bold;
 }
@@ -446,6 +451,7 @@ input {
     text-align: left;
     display: flex;
     margin: auto;
+    max-height: 60px;
 }
 
 .markCircle {
