dancing potatos show up gradually

--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -542,20 +542,24 @@ input {
     position: absolute;
     top: 55%;
     right: 15%;
+    display: none;
 }
 #cycle2 {
     position: absolute;
     top: 65%;
     left: 15%;
+    display: none;
 }
 
 #cycle3 {
     position: absolute;
     top: 70%;
     right: 22%;
+    display: none;
 }
 #cycle4 {
     position: absolute;
     top: 50%;
     left: 20%;
+    display: none;
 }
