--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -239,8 +239,8 @@ input[type="text"] {
       margin-left: auto;
   }
   .footer button {
-      background: none;
-      border: none;
+      /* background: none;
+      border: none; */
       padding: 0;
       font-size: 0.3em;
       color: black;
@@ -558,4 +558,14 @@ input {
     position: absolute;
     top: 50%;
     left: 20%;
+}
+
+.transparent {
+    background: none;
+    border: none;
+    padding: 0;
+}
+
+.transparent:hover {
+    background: none;
 }
