Changes circle when entering break mode

--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -127,6 +127,13 @@ p {
     background-color: #ff0;
     box-shadow: 0 0 15px 15px #ff0;
 }
+
+.circlePotatoBreak {
+    border: 8px solid rgb(255, 195, 84);
+    background-color: rgb(255, 195, 84);
+    box-shadow: 0 0 50px gold,0 0 150px gold;;
+}
+
 #timerDisplay {
     margin:25px auto;
     padding: 26px 0px;
@@ -322,6 +329,8 @@ input[type="text"] {
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
+    color: black;
+    margin-right: 20px;
 }
 
 button {
