--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -79,7 +79,9 @@ p {
 }
 
 #phaseWrapper {
-    margin: 70px 0px 30px 0px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 #phaseDisplay {
