--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -352,6 +352,12 @@ button {
     background-color: #333;
 }
 
+#disableBtn {
+    font-size: 18px;
+    margin: auto;
+    margin-top: 20px;
+}
+
 .darkButton {
     background-color: #999;
 }
@@ -365,7 +371,7 @@ button:hover {
 
 .userInputContainer {
     margin: 20px 20px 20px 20px;
-    padding-left: 25px;
+    padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 20px;
     max-width: 350px;
@@ -373,12 +379,12 @@ button:hover {
 }
 
 .fieldLabel {
-    font-size: 24px;
+    font-size: 21px;
 }
 
 input {
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
 }
 .customTime {
     width: 60px;
@@ -410,6 +416,7 @@ input {
 .userInputContainer p {
     display: inline;
     margin: 0 -10px;
+    font-size: 25px;
 }
 
 
