--- a/source/potatoTheme.css
+++ b/source/potatoTheme.css
@@ -269,24 +269,6 @@ p {
     width: 64px;
     height: 64px;
   }
-  
-  .footer {
-      position: absolute;
-      bottom: 15px;
-      display: flex;
-      justify-content: flex-end;
-      width: 100%;
-  }
-
-  .footer button:hover {
-      background: none;
-  }
-
-  .footer a {
-      position: relative;
-      /* margin-left: auto; */
-      margin-right: 50px;
-  }
 
 /*--------------------------------
         Instructions Menu Display
@@ -303,6 +285,11 @@ p {
 
 #instrContent {
     font-size: 1.6rem;
+}
+#instrContent a img {
+    margin-top: 10px;
+}
+.leftAlign{
     text-align: left;
 }
 /*---------------------------------
@@ -524,7 +511,6 @@ input {
     text-align: left;
     display: flex;
     margin: auto;
-    max-height: 60px;
     border-bottom: solid 1px;
 }
 
@@ -566,6 +552,15 @@ input {
     margin-bottom: 15px;
     margin-top: 7px;
 }
+
+.pinnedTask {
+    border-bottom: 2px solid black;
+}
+.pinnedTask:first-child {
+    border-top: 2px solid black;
+}
+
+
 
 @media screen and (max-width: 768px) {
     .tasksTitle {
